--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - run:
           name: Deploy Over SSH
-          command: ssh $SSH_USER@$SSH_HOST 'sudo salt-call --local state.apply'
+          #command: ssh $SSH_USER@$SSH_HOST 'sudo salt-call --local state.apply'
+          command: ssh $SSH_USER@$SSH_HOST 'ls -la'
 
 workflows:
   main:
