--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           #command: ssh $SSH_USER@$SSH_HOST 'sudo salt-call --local state.apply'
-          command:
-            - ssh $SSH_USER@$SSH_HOST 'ls -la'
+          command: ssh $SSH_USER@$SSH_HOST 'ls -la'
 
 workflows:
   main:
