tentative de co ssh

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,19 @@ jobs:
     machine:
       enabled: true
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "e0:c8:ef:05:c9:bb:ed:bd:5a:40:c6:3f:d5:47:59:05"
       - checkout
+      - 'which ssh-agent || ( apt-get install -qq openssh-client )'
+      - eval $(ssh-agent -s)
+      - ssh-add <(echo "$SSH_PRIVATE_KEY")
+      - mkdir -p ~/.ssh
+      - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
       - run:
           name: Deploy Over SSH
           #command: ssh $SSH_USER@$SSH_HOST 'sudo salt-call --local state.apply'
-          command: ssh $SSH_USER@$SSH_HOST 'ls -la'
+          command: ssh $SSH_ROOT_USER@$SSH_ROOT_HOST 'ls -la'
 
 workflows:
   main:
