--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,9 @@ jobs:
           fingerprints:
             - "9f:6d:a9:1d:01:7a:dc:51:cf:2c:98:d3:7d:5c:99:28"
       - checkout
-#      - 'which ssh-agent || ( apt-get install -qq openssh-client )'
-#      - eval $(ssh-agent -s)
-#      - ssh-add <(echo "$SSH_PRIVATE_KEY")
-#      - mkdir -p ~/.ssh
-#      - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
       - run:
           name: Deploy Over SSH
-          #command: ssh $SSH_USER@$SSH_HOST 'sudo salt-call --local state.apply'
-          command: ssh $SSH_ROOT_USER@$SSH_ROOT_HOST 'ls -la'
+          command: ssh $SSH_ROOT_USER@$SSH_ROOT_HOST 'salt-call --local state.apply'
 
 workflows:
   main:
